@@ -2936,3 +2936,4 @@
 ( cvs diff -u -r 1.30.2.37 -r 1.30.2.38 src/prefs_toolbar.c;  cvs diff -u -r 1.43.2.85 -r 1.43.2.86 src/toolbar.c;  ) > 3.0.2cvs21.patchset
 ( cvs diff -u -r 1.19.2.22 -r 1.19.2.23 src/toolbar.h;  ) > 3.0.2cvs22.patchset
 ( cvs diff -u -r 1.30.2.38 -r 1.30.2.39 src/prefs_toolbar.c;  ) > 3.0.2cvs23.patchset
+( cvs diff -u -r 1.30.2.39 -r 1.30.2.40 src/prefs_toolbar.c;  cvs diff -u -r 1.43.2.86 -r 1.43.2.87 src/toolbar.c;  cvs diff -u -r 1.19.2.23 -r 1.19.2.24 src/toolbar.h;  ) > 3.0.2cvs24.patchset
